--- a/style/common/spacing-variables.scss
+++ b/style/common/spacing-variables.scss
@@ -1,3 +1,4 @@
 $bp-largest: 85em;
 $bp-large: 62.5em;
 $bp-mid: 45em;
+$bp-small: 22em;
