--- a/style/output/index.css
+++ b/style/output/index.css
@@ -69,6 +69,11 @@ header {
     background: linear-gradient(to right, rgba(255, 255, 255, 0.8), whitesmoke), url("../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg") top left/auto 100% no-repeat;
   }
 }
+@media only screen and (max-width: 22em) {
+  header {
+    font-size: 1.2rem;
+  }
+}
 header h1 {
   font-weight: 500;
   letter-spacing: -1px;
